src/force-app/main/default/objects/Prix__c/Prix__c.object-meta.xml
<CustomObject>
    <label>Prix</label>
    <nameField>
        <label>Nom de Prix</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>