src/force-app/main/default/objects/Prix__c/fields/DelaiDeLivraisonJours__c.field-meta.xml
<CustomField>
    <fullName>DelaiDeLivraisonJours__c</fullName>
    <label>Delai de Livraison jours</label>
    <length>10</length>
    <type>Text</type>
</CustomField>