src/force-app/main/default/objects/Prix__c/fields/Tarif__c.field-meta.xml
<CustomField>
    <fullName>Tarif__c</fullName>
    <label>Tarif</label>
    <length>10</length>
    <type>Text</type>
</CustomField>