src/force-app/main/default/objects/Prix__c/fields/TransporteurID__c.field-meta.xml
<CustomField>
    <fullName>TransporteurID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporteur</label>
    <referenceTo>Transporteur__c</referenceTo>
    <relationshipLabel>Prix</relationshipLabel>
    <relationshipName>Prix</relationshipName>
    <type>Lookup</type>
</CustomField>